input whitespaces and non-alphanumeric characters are removed now.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 				<hr />
 			</div>
 			<div>
-				<p>This Palindrome Detector can detect whether a word, phrase, or number is a palindrome.</p>
-				
 				<p>A <span class="define">palindrome</span> is word, phrase, or number that reads the same forwards and backwards. Some well-known palindromes include
 				the words <em>kayak</em> and <em>racecar</em>, and the phrase <em>"Madam, I'm Adam"</em>.</p>
 				<hr />
@@ -32,9 +30,7 @@
 				</form>
 				<hr />
 			</div>
-			<div id="results">
-				
-			</div>
+			<div id="results"></div>
 			
 		</div>
 	</body>
