- added a link to the code on GitHub - removed Google Fonts as it was impacting load time

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+<!--    Palindrome Detector
+        author: Cathryn Griffiths - cathryn.griffiths@gmail.com - github.com/escrimeuse/
+    -->
 <html>
 	<head>
 		<title>Palindrome Detector</title>
 		<meta charset="utf-8" />
 		<meta name="author" content="Cathryn Griffiths" />
 		<meta name="keywords" content="palindrome,test" />
-		
+
+        <!--CSS Stylesheet-->
 		<link href="styles.css" type="text/css" rel="stylesheet" />
-		<link href='http://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
-		
+
+        <!--JavaScript file-->
 		<script src="palindrome.js" type="text/javascript" ></script>
 		
 	</head>
@@ -31,7 +35,10 @@
 				<hr />
 			</div>
 			<div id="results"></div>
-			
-		</div>
+            <div>
+                <hr />
+                <p><a href="https://github.com/escrimeuse/Palindrome" />Click here to view the code on GitHub</a></p>
+            </div>
+            </div>
 	</body>
 </html>
